# rust-illumos-priv

./: Cargo.toml
src/: ffi.rs  lib.rs
