[package]
name = "illumos-priv"
version = "0.2.0"
description = "Crate providing an interface to illumos's PRIVILEGES(5)"
readme = "README.md"
authors = ["Mike Zeller <mike@mikezeller.net>"]
repository = "https://github.com/TritonDataCenter/rust-illumos-priv"
keywords = ["illumos", "solaris", "security", "privileges"]
edition = "2021"
license = "MPL-2.0"
categories = [
    "os",
    "os::unix-apis"
]
exclude = ["deps/*"]

[dependencies]
libc = "0.2.159"
